# tarte-tilde

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: c-cpp.yml
package/: package-info.json
package/docs/: tarte.voice~.maxref.xml
package/examples/: polyphonic_voice.maxpat  voice_instance.maxpat  voice_interpolate_presets.maxpat
package/extras/: Tarte-Overview.maxpat
package/help/: tarte.reed~.maxhelp  tarte.trackpad.maxhelp  tarte.voice~.maxhelp
src/tarte-tilde/: Authors.md  CMakeLists.txt
src/tarte-tilde/examples/: Voice_descriptors.maxpat
src/tarte-tilde/help/: phase-shift.maxpat  tarte.reed.maxhelp  tarte.voice.maxhelp
src/tarte-tilde/package/: README.md  package-info.json
src/tarte-tilde/package/docs/: tarte.reed.maxref.xml  tarte.reed~.maxref.xml  tarte.voice.maxref.xml
src/tarte-tilde/package/examples/: open_quotient.maxpat  polyphonic_voice.maxpat  voice presets - interpolatable.maxpat  voice_instance.maxpat  voice_interpolate_presets.maxpat
src/tarte-tilde/package/help/: tarte.reed~.maxhelp  tarte.voice.maxhelp  tarte.voice~.maxhelp
src/tarte-tilde/src/tarte.reed/: CMakeLists.txt
src/tarte-tilde/src/tarte.reed_tilde/: CMakeLists.txt  tarte.reed_tilde.cpp
src/tarte-tilde/src/tarte.trackpad/: CMakeLists.txt  tarte.trackpad.c
src/tarte-tilde/src/tarte.voice/: CMakeLists.txt  tarte.voice.cpp
src/tarte-tilde/src/tarte.voice_tilde/: CMakeLists.txt
src/tarte-tilde/src/tarte.voice~/: CMakeLists.txt
